@@ -4,9 +4,10 @@
 
 Version 1.5.11 (XX/YY/ZZZZ)
  * Fixed a crash upon file transfer completion on Bonjour. (Quentin Les) (#16038, #16182)
- * Fixed a problem with signing in to Twitter and updating the timeline on 10.10. (#16882)
- * Fixed a problem with signing in to Yahoo!. (reanimus) (#16678)
+ * Fixed a problem with signing in to Twitter and updating the timeline on OS X 10.10. (#16882)
+ * Fixed a problem with signing in to Yahoo!. ("reanimus") (#16678)
  * Google Talk now authenticates using OAuth2, making logging in simpler when using two-factor authentication and more secure. (#16161)
+ * Fixed UI glitches in Adium’s preferences on OS X 10.10. (#16803)
 
 
 Version 1.5.10 (05/19/2014)
